# ron-mod-manager

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
aur/: PKGBUILD
scripts/: version_bump.py
src/: App.vue  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  config.rs  lib.rs  main.rs  sso.rs  updater.rs  vfs.rs
src/components/: InstallModal.vue  ModGrid.vue  RightPanel.vue  SettingsModal.vue  Sidebar.vue  UpdateModal.vue
updater-test/: README_LOCAL_TEST.md  latest.json  tauri.local.conf.json
