[package]
name = "ron-mod-manager"
version = "0.2.2"
description = "A mod manager for Ready or Not"
authors = ["EvilNick2"]
license = "MIT"
repository = "https://github.com/EvilNick2/ron-mod-manager"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ron_mod_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "fast-rng"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
rfd = "0.14"
zip = "8.3.1"
rar = "0.4"
base64 = "0.22"
keyring = "2"
